--- a/player/style.css
+++ b/player/style.css
@@ -136,6 +136,8 @@
     appearance: none;
     position: absolute;
     z-index: 4;
+    height: 5px;
+    background: #000000;
     height: 7px;
     background: #a7dab4;
     width: 160pt;
@@ -143,27 +145,18 @@
     border-radius: 30px;
     left: 17%;
     cursor: pointer;
-   
-    
+
+
 }
 .progress{
     background-color: rgb(34, 70, 231);
     height: 7px;
     border-radius: 30px;
-    
+
 }
 
 
 
-
-/* .wrapper{
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: cornsilk;
-} */
 
 
 
