--- a/API images/style.css
+++ b/API images/style.css
@@ -32,11 +32,13 @@
   
   .btn {
     padding: 8px;
+    cursor: pointer;
   }
   .quote{
       max-width: 500px;
-      height: 75px;
+      height: 150px;
       text-align: center;
+      font-size: 20px;
   }
   .quote-author{
       font-weight: bold;
@@ -47,15 +49,55 @@
     justify-content: space-between;
     height: 50px;
     width: 70px;
-    color: #fff;
+    color: rgb(204, 185, 176);
     text-decoration: none;
     font-size: 20px;
     line-height: 50px;
     font-family: inter;
     padding-right: 20px;
+    cursor: pointer;
   }
   
   .active-lang {
-    color: #bdae82;
+    color: black;
+    text-decoration: underline;
   }
-    
+  
+  .animation {
+    /* Запустите анимацию встряхивания и сделайте так, чтобы анимация длилась 0,5 секунды */
+    animation: shake 0.5s;
+  
+    /* Когда анимация будет закончена, начните снова */
+    animation-iteration-count: 1;
+  }
+  
+  @keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  
+}
+ /* анимация вращение */
+
+  /* .img2{
+	-webkit-transition: all 0.5s linear 0s;
+	-moz-transition: all 0.5s linear 0s;
+	-o-transition: all 0.5s linear 0s;
+	transition: all 0.5s linear 0s;
+}
+.img2:hover {
+	-webkit-transform: rotate(360deg);
+	-moz-transform: rotate(360deg);
+	-ms-transform: rotate(360deg);
+	-o-transform: rotate(360deg);
+	transform: rotate(360deg);
+}	 */
+
